...
                    Button(action: {
                        viewModel.toggleShowModalAddTask()
                    }) {
                        Image(systemName: "plus")
                            .foregroundColor(.white)
                    }
                    .accessibilityIdentifier("Add Task")
                    .sheet(isPresented: $viewModel.showModalAddTask) {
                        AddTaskViewController(
                            viewModel: {
                                let addTaskViewModel = AddTaskViewModel(taskRepository: TaskRepository())
                                addTaskViewModel.onTaskAdded = {
                                    viewModel.loadTasks()
...
